# rspack

./: Cargo.toml  package.json  pnpm-lock.yaml
.github/actions/rustup/: action.yml
.github/workflows/: ci.yml  release-canary.yml  reusable-build.yml
crates/node_binding/: Cargo.toml  binding.d.ts
crates/node_binding/src/: filename.rs  stats.rs
crates/rspack_binding_options/: Cargo.toml
crates/rspack_core/: Cargo.toml
crates/rspack_core/src/: concatenated_module.rs
crates/rspack_core/src/compiler/: compilation.rs
crates/rspack_core/src/compiler/module_executor/: ctrl.rs  entry.rs  execute.rs  mod.rs
crates/rspack_macros/src/: runtime_module.rs
crates/rspack_plugin_circular_dependency/: Cargo.toml
crates/rspack_plugin_circular_dependency/src/: lib.rs
crates/rspack_plugin_lightning_css_minimizer/src/: lib.rs
crates/rspack_plugin_runtime/src/runtime_module/: auto_public_path.rs
scripts/: package.json
